@@ -57,6 +57,12 @@ led_failure = #FF000000
 # Border of the SMDH icon used in manual lumalocale
 smdh_icon_border_color = #FFFFFFFF
 
+# Color of the border of a checkbox
+checkbox_border_color = #FFFFFFFF
+
+# Color of the fill in a checked checkbox, an unchecked box has a color of #00000000 (α=0, appropriate is used)
+checkbox_check_color = #000000FF
+
 # Relative from the .cfg file path to your more image, recommended 20x20
 more_image = ./default_data/more_dark.png
 
