@@ -2,5 +2,5 @@
 dir="$(dirname "$0")"
 echo $dir
 
-"$dir/3hstool" maketheme "$dir/light.cfg" "$dir/../romfs/light.hstx"
-"$dir/3hstool" maketheme "$dir/dark.cfg" "$dir/../romfs/dark.hstx"
+"$dir/3hstool" maketheme "$dir/light.cfg" "$dir/../data/light.hstx"
+"$dir/3hstool" maketheme "$dir/dark.cfg" "$dir/../data/dark.hstx"
