@@ -419,3 +419,12 @@ Volgens ENVINFO is deze 3DS een ontwikkelaars variant.
 3hs zal niet correct werken op deze 3DS.
 Als je een normale 3DS hebt, controleer dan of "Enable developer UNITINFO" uit staat in de Luma3DS instellingen.
 
+- hint_navigate
+UI_GLYPH_DPAD_CLEAR/UI_GLYPH_CPAD: navigeer
+
+- made_by
+door %1
+
+- themes
+Themas
+
