@@ -420,3 +420,12 @@ Cette console a été détecté en tant qu'unité de développement.
 3hs risque de ne pas fonctionner correctement.
 Si vous avez une 3ds normale, soyez sûr d'avoir désactivé "Enable developer UNITINFO" dans le menu de configuration luma.
 
+- hint_navigate
+UI_GLYPH_DPAD_CLEAR/UI_GLYPH_CPAD: sélectionner
+
+- made_by
+par %1
+
+- themes
+Thèmes
+
