@@ -414,3 +414,17 @@ LEDステータスインジケータを有効にする
 - allow_led_desc
 これにより、LEDライトが点滅し、タイトルのインストールが完了したときなど、さまざまなステータスの変更を通知します。
 
+- hint_navigate
+UI_GLYPH_DPAD_CLEAR/UI_GLYPH_CPAD: ナビゲート
+
+- made_by
+%1
+
+- themes
+テーマ
+
+- dev_unitinfo
+このコンソールのENVINFOによると、これは開発ユニットです。
+このシステムでは3hsは正しく機能しません。
+リテール3DSを使用している場合は、Luma3DS構成の「Enable developer UNITINFO」が無効になっていることを確認してください。
+
