@@ -287,6 +287,17 @@ let TargetVersion = ($Major &lt;&lt; 20) | ($Minor &lt;&lt; 10) | ($Patch)
 				<td>Color (RGBA)</td>
 			</tr>
 			<tr>
+				<td>ID_CHKBX_BORDER_CLR</td>
+				<td>0x1016</td>
+				<td>Color (RGBA)</td>
+			</tr>
+			<tr>
+				<td>ID_CHKBX_CHK_CLR</td>
+				<td>0x1017</td>
+				<td>Color (RGBA)</td>
+			</tr>
+			<!-- -->
+			<tr>
 				<td>MORE_IMG</td>
 				<td>0x2001</td>
 				<td>Raw image data (RGBA)</td>
